# jsonpath

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
jsonpath/: cli.py  jsp.py  test_jsp.py
